--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="URL Shortener" />
+    <meta property="og:description" content="Use this to shorten your links to share easily" />
+    <!--meta property="og:url" content="http://webdevelopmentscripts.com/64-how-to-change-the-address-bar-color-in-chrome-firefox-opera-safari" /-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>URL Shortener</title>
 </head>
-<body style="background-color:#DFCFBE">
-    <div class="container">
-        <h1 style="text-align:center">URL Shortener</h1>
+<body style="background: #4CA1AF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+">
 
-    <form action="/shortURLs" method="POST" class="my-4 form-inline">
-        <label for="fullURL" class="sr-only">URL</label>
+    <div class="container card" style="z-index:10%; margin-top:5%">
+        <h1 style="text-align:center" class="card-title">URL Shortener</h1>
+
+    <form action="/shortURLs" method="POST" class="my-4 form-inline card-body">
+        <label for="fullURL" class="sr-only">Enter URL</label>
         <input required placeholder="Input URL" type="url" name="fullURL" id="fullURL" class="form-control col mr-2">
-        <button class="btn btn-success"type="submit">Shorten!</button>
+        <button class="btn btn-success"type="submit">Shorten URL</button>
     </form>
-    <table class="table table-striped table-responsive">
+    <table class="table table-striped table-responsive card-body">
         <thead>
             <tr>
                 <th>Full URL</th>
@@ -24,6 +31,7 @@
             </tr>
         </thead>
         <tbody>
+            <h3>Here are a few examples of the URLs we have shortened:</h3>
             <% shortURLs.forEach(shortURL=>{ %>
                 <tr>
                     <td><a href="<%=shortURL.full%>"><%=shortURL.full %></a></td>
@@ -31,13 +39,10 @@
                     <td><%=shortURL.clicks %></td>
                 </tr>
            <% }) %>
-            <tr>
-                <td><a href="https://www.youtube.com/">https://www.youtube.com/</a></td>
-                <td><a href="/123456">123456</a></td>
-                <td>10</td>
-            </tr>
+            
         </tbody>
     </table>
+
 </div>
 </body>
 </html>
